@@ -10,6 +10,7 @@ Enhancements:
 - #6836 Enabling Github Code Scanning
 - #6841 Windows installer has been updated.
 - #6844 macOS installer has been updated.
+- #6??? About Synergy logo refreshed
 
 v1.12.x-snapshot
 ===========
